<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPersonActivity"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/img_item_photo"
        tools:src="@android:color/darker_gray"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_item_photo"
        tools:text="Username"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name_user"
        tools:text="Name"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>
    <RelativeLayout
        android:id="@+id/rv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textSize="14sp"
            android:layout_marginRight="8dp"/>
        <TextView
            android:id="@+id/follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_follower"
            android:text="@string/follower"
            android:layout_marginRight="8dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:textSize="14sp"
            android:layout_marginRight="8dp"
            android:layout_toRightOf="@id/follower"/>
        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_following"
            android:text="@string/following"
            android:textStyle="bold"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_follower"
        android:layout_centerHorizontal="true"
        android:text="@string/Follow"
        android:layout_marginBottom="16dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_follow"
        android:text="@string/location"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location"
        android:textSize="14sp"
        tools:text="@string/location"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_location"
        android:text="@string/company"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/company"
        android:textSize="14sp"
        tools:text="@string/company_detail"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/repositori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_company"
        android:textSize="16sp"
        android:text="@string/repository"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tv_name_repositori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repositori"
        android:textSize="14sp"
        tools:text="@string/nama_repository"
        android:layout_marginBottom="2dp"/>
    <TextView
        android:id="@+id/tv_lang_repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name_repositori"
        android:textSize="10sp"
        tools:text="@string/lang_repository"
        android:textStyle="bold"/>

</RelativeLayout>